# infra

./: .device  .envkey  .gitignore  .profile  README.md  pre.sh  run.sh  select.sh  set-aes.sh  set-envkey.sh
aspire-one/: .env.enc  config.toml  pyproject.toml  tasks.py
aspire-one/system/etc/: fstab
katana17b12v/: .env  .env.enc  config.toml  crypt.py  main.py  pyproject.toml  tasks.py
katana17b12v/system/etc/: fstab
katana17b12v/system/etc/btrbk/: btrbk.conf
